Arreglado fallos CI
